# pixeltable

./: DESIGN_SYSTEM.md  agent_loop_benchmark_report.md  local-ui-requirement.md  pyproject.toml  test_agent_frameworks_comparison.py  test_agent_trace_report.py  test_pxt_vs_langgraph.py
.github/workflows/: pytest.yml
dashboard/: .gitignore  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/cookbook/: PLANNED_RECIPES.md  README.md  analyze-financial-data-with-llms.ipynb  answer-questions-from-docs.ipynb  auto-generate-video-captions.ipynb  build-chatbot-with-memory.ipynb  build-reverse-image-search.ipynb  classify-customer-support-tickets.ipynb  classify-product-images.ipynb  compare-llm-responses-across-models.ipynb  let-ai-search-web-for-answers.ipynb  (+2 more)
docs/sample-apps/video-surveillance-platform/backend/: config.py  functions.py  main.py  models.py  pyproject.toml  setup_pixeltable.py
docs/sample-apps/video-surveillance-platform/backend/data/: 1773553094802_31968728a377b6faf1840916448b92a8b1258d32.mov
docs/sample-apps/video-surveillance-platform/backend/routers/: browse.py  dashboard.py  search.py  videos.py
docs/sample-apps/video-surveillance-platform/backend/sitewatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/sample-apps/video-surveillance-platform/backend/static/: index.html
docs/sample-apps/video-surveillance-platform/backend/static/assets/: index-DwlzqJJT.css  index-O3vWR-tR.js
pixeltable/: __init__.py  config.py  env.py  globals.py
(+86 files in other folders)
